[package]
name = "proc_mozjs"
version = "0.1.0"
authors = ["sagudev <samo.golez@outlook.com>"]
edition = "2018"

[dependencies]
concat-idents = "1"
proc = { path = "proc" }

[dev-dependencies]
mozjs = { git = "https://github.com/servo/rust-mozjs", rev="fe738cca3320ffcbc4c520ced79c2141ceabf42d"}
libc = "0.2.92"